--- a/_posts/2024-05-08-Hand.md
+++ b/_posts/2024-05-08-Hand.md
@@ -50,7 +50,7 @@ p wave superconductor (2)
 Yang mills gauge field  
 </a></li>
 
-####
+### Topologcal physics
 
 
 <li>
@@ -102,4 +102,25 @@ Clifford Algebra (I)
 <li>
 <a href="https://maggiexheuw.github.io/Group/crystal.pdf">
 Crystal field splitting
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/crystal field.pdf">
+Crystal field splitting 
+</a></li>
+
+
+
+## Research
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/su(2) harmonics.pdf">
+SU（2） monopole harmonics 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/peridoic landaulevel.pdf">
+Periodic Landau levels
 </a></li>
