--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -92,6 +92,10 @@ Gandhi Viswanathan's Blog
 </a></li>
 
 
+<li><a href="https://galileoandeinstein.phys.virginia.edu/Elec_Mag/2022_Lectures/EM_44_Symmetries_Monopole.html"> 
+Symmetry and Dirac monopole
+</a></li>
+
 
 
 ## Field theory 
