--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -94,3 +94,18 @@ Electrodynamics in topological insulators--Moore
 Hopf terms for ayons--Nicolai Lang
 </a></li>
 
+
+## Cong Jun Wu's Lecture 
+
+
+<li>
+<a href="https://maggiexheuw.github.io/PPTX/Frustratedsuperfluidity_ShanghaiTech.pptx">
+Frustrated superfluidity--Cong Jun Wu
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/Wu2_ColdAtoms_KITP.pdf">
+Hidden Symmetry and Quantum Phases in
+Spin $\frac{3}{2}$  Cold Atomic Systems--Cong Jun Wu
+</a></li>
