--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -172,3 +172,25 @@ Holt inequality in quantum field theory
 
 
 
+## Topological term in $SU(4)$ Heisenberg model 
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/1-s2.0-0550321389900618-main.pdf">
+Some features of the phase diagram of the square Lattice $SU(N)$ model.
+-- Read and Sachdev (1989)
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/1-s2.0-0550321389900618-main.pdf">
+Valence-Bond and Spin-Peierls Ground States of Low-Dimensional Quantum
+Antiferromagnets
+-- Read and Sachdev (1989)
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/1-s2.0-0550321389900618-main.pdf">
+Critical behaviour of $SU(n)$ quantum chains and topological non-linear $\sigma$ -models
+-- Affleck(1988)
+</a></li>
