--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -76,6 +76,13 @@ Interacting Electrons Theory and Computational Approaches--Cambradige press
 Many-particle physics (Gerald D. Mahan) (Z-Library).djvu--Mahan
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/pdf/Field Theory Methods and Quantum Critical Phenomena - Fields, Strings and Critical Phenomena, p. 563-640, (ed. E. Brézin and J.... (I. Affleck) (Z-Library).pdf">
+Field theory methods and critical phenomenna --Affleck $(1990)$
+</a>
+</li>
+
+
 
 
 ### Quantum Hall effect
@@ -209,6 +216,8 @@ and Invariants , for mathematical techniques -- Goodman </p>
 The theory of group characters and matrix representations of groups --Littlewood 
 </a>
 </li>
+
+
 
 
 ### Clliford Algebra recommended
