--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -112,6 +112,10 @@ Condensed Matter Physics--Claudio Chamon
 Topological phase of condense matter--Moore
 </a></li>
 
+<li><a href="https://maggiexheuw.github.io/Group/Topological and non-topological solitons in scalar field -- Shnir, Yakov M -- Cambridge monographs on mathematical physics, 2018 -- Cambridge -- 9781108636254 -- 6b62f84bf56ded1e3a45986d7b69df83 -- Anna’s Archive.djvu">
+Topological soliton 
+</a></li>
+
 ## Field theory textbooks recommended 
 
 <li>
