--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -97,6 +97,10 @@ Symmetry and Dirac monopole
 </a></li>
 
 
+<li><a href="https://zhuanlan.zhihu.com/p/23690915"> 
+Haldane chain 
+</a></li>
+
 
 ## Field theory 
 
@@ -148,3 +152,11 @@ Bilili-- A tool to download vedio from Bilibili
 https://celebratio.org/Atiyah_MF/article/41/">
 Instanton--Michael Atiyah
 </a></li>
+
+
+<li>
+<a href="
+https://mymatexnotes.blogspot.com/2023/01/infinite-series-involving-sech2n-pi-s.html?m=1">
+Epllitic function
+</a></li>
+
