--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -94,7 +94,22 @@ Electrodynamics in topological insulators--Moore
 Hopf terms for ayons--Nicolai Lang
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/Group/Mila.pdf">
+$SU(4)$ Hubbard model 
+</a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/Group/exact.pdf">
+one dimensional exact solution--jun peng Cao
+</a></li>
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/Assaad_CompQCM_KITP.pdf">
+$SU(N)$ Hubbard model on honeycomb--Assaad 
+</a></li>
 ## Cong Jun Wu's Lecture 
 
 
