--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -51,18 +51,24 @@ Nathan--Goldman
 </a></li>
 
 
-<li><a href="http://insti.physics.sunysb.edu/ITP/symmetries-99/program.html"> 
+<li>
+<a href="http://insti.physics.sunysb.edu/ITP/symmetries-99/program.html"> 
 C.N.Yang 
 </a></li>
 
-<li><a href="https://www.ias.edu/sns/adler"> 
+
+<li>
+<a href="https://www.ias.edu/sns/adler"> 
 Stephen.Adler
 </a></li>"> 
 
 
-<li><a href="https://www.ias.edu/sns/malda"> 
+<li>
+<a href="https://www.ias.edu/sns/malda"> 
 Juan.Maldcena
 </a></li>"> 
+
+
 
 
 ## Group theory
@@ -151,12 +157,14 @@ Bilili-- A tool to download vedio from Bilibili
 <a href="
 https://celebratio.org/Atiyah_MF/article/41/">
 Instanton--Michael Atiyah
-</a></li>
+</a><
+/li>
 
 
 <li>
 <a href="
 https://mymatexnotes.blogspot.com/2023/01/infinite-series-involving-sech2n-pi-s.html?m=1">
 Epllitic function
-</a></li>
+</a>
+</li>
 
