--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -194,3 +194,20 @@ Antiferromagnets
 Critical behaviour of $SU(n)$ quantum chains and topological non-linear $\sigma$ -models
 -- Affleck(1988)
 </a></li>
+
+
+## Charge 4e superconductor 
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/PhysRevLett.95.266404.pdf">
+Competing Orders in One-Dimensional Spin-$\frac{3}{2}$ Fermionic Systems--Congjun Wu 
+</a></li>
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/PhysRevB.106.094508.pdf">
+Solvable model for a charge-4e superconductor
+-- Yuxuan wang 
+</a></li>
