--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -105,6 +105,8 @@ one dimensional exact solution--jun peng Cao
 </a></li>
 
 
+### Wu lecture
+
 
 <li>
 <a href="https://maggiexheuw.github.io/Group/Assaad_CompQCM_KITP.pdf">
@@ -123,4 +125,11 @@ Frustrated superfluidity--Cong Jun Wu
 <a href="https://maggiexheuw.github.io/Group/Wu2_ColdAtoms_KITP.pdf">
 Hidden Symmetry and Quantum Phases in
 Spin $\frac{3}{2}$  Cold Atomic Systems--Cong Jun Wu
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/FM_ShanghaiNY_2018.pdf">
+Progress on Itinerant Electrons – Ferromagnetism,
+Curie-Weiss Metal, and Spin-orbit Ordering--Cong Jun Wu
 </a></li>
