--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -26,6 +26,13 @@ Quantum Condensed Matter Physics - Lecture
 Notes
 </a></li>
 
+
+<li><a href="https://maggiexheuw.github.io/Group/Bosonization and strongly correlated systems (Alexander O. Gogolin, Alexander A. Nersesyan etc.) (Z-Library).djvu">
+Bosonization and strongly correlated systems--Alexander O. Gogolin, Alexander A. Nersesyan 
+</a></li>
+
+
+
 ### Superconductivity
 <li><a href="https://maggiexheuw.github.io/pdf/tao.pdf">
 d wave superconductor -- Tao Xiang, Congjun WU 
