--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -20,10 +20,7 @@ Topological Terms of Nonlinear Sigma models--Cen Ke Xu
 </a></li>
 
 
-<li>
-<a href="https://maggiexheuw.github.io/PPTX/Frustratedsuperfluidity_ShanghaiTech.pptx">
-Frustrated superfluidity--Cong Jun Wu
-</a></li>
+
 
 <li>
 <a href="https://maggiexheuw.github.io/pdf2/Delgado.pdf">
@@ -41,6 +38,14 @@ from graviton oscillation to quantum many-body scars--Papic
 Geometry of "flux attachment" in
 the fractional quantum Hall effect-Haldane
 </a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/13050049.pdf">
+Geometry and entanglement entropy -- Haldane 
+</a></li>
+
+
 
 <li>
 <a href="https://maggiexheuw.github.io/pdf2/Wang Yuzhu_SPMS_Thesis.pdf">
@@ -104,6 +109,12 @@ $SU(4)$ Hubbard model
 one dimensional exact solution--jun peng Cao
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/Group/Shibata.pdf">
+Quantum hall and entanglement entropy --N. Shibata
+</a></li>
+
+
 
 ### Wu lecture
 
@@ -132,4 +143,11 @@ Spin $\frac{3}{2}$  Cold Atomic Systems--Cong Jun Wu
 <a href="https://maggiexheuw.github.io/Group/FM_ShanghaiNY_2018.pdf">
 Progress on Itinerant Electrons – Ferromagnetism,
 Curie-Weiss Metal, and Spin-orbit Ordering--Cong Jun Wu
+</a></li>
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/PPTX/Frustratedsuperfluidity_ShanghaiTech.pptx">
+Frustrated superfluidity--Cong Jun Wu
 </a></li>
