--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -151,3 +151,17 @@ Curie-Weiss Metal, and Spin-orbit Ordering--Cong Jun Wu
 <a href="https://maggiexheuw.github.io/PPTX/Frustratedsuperfluidity_ShanghaiTech.pptx">
 Frustrated superfluidity--Cong Jun Wu
 </a></li>
+
+
+### Entangle ment Enropy 
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/CERNEE (1).pdf">
+Entanglement Entropy and AdS/CFT--Tadashi Takayanagi
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Shibata.pdf">
+Quantum Hall state and entropy--Shibata
+</a></li>
