--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -86,7 +86,13 @@ An introduction to balck holes, information, and the string theory revolution
 </a></li>
 
 
-
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Lectures on
+Matrix Field
+Theory.pdf">
+Lectures on Matrix Field
+Theory--Badis Ydri
+</a></li>
 
 
 ### Conformal field theory
@@ -96,6 +102,17 @@ An introduction to balck holes, information, and the string theory revolution
 <a href="https://conf.itp.phys.ethz.ch/esi-school/lecture-notes.html">
 Conformal field theory lecture
 </a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/rychkov_CFT.pdf">
+EPFL Lectures on Conformal Field Theory
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/EPFL Lectures on Conformal Field Theory in D ≥ 3 Dimensions (Slava Rychkov (auth.)) (Z-Library).pdf>
+EPFL Lectures on Conformal Field Theory
+</a></li>
+
 
 
 
