--- a/_posts/2024-05-08-Hand.md
+++ b/_posts/2024-05-08-Hand.md
@@ -50,6 +50,15 @@ p wave superconductor (2)
 Yang mills gauge field  
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/bethe.pdf">
+Bethe ansatz 
+</a></li>
+
+
+
+
+
 ### Topologcal physics
 
 
@@ -123,4 +132,10 @@ SU（2） monopole harmonics
 <li>
 <a href="https://maggiexheuw.github.io/Group/peridoic landaulevel.pdf">
 Periodic Landau levels
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/sumer camp.pdf">
+Summer camp
 </a></li>
