--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -109,10 +109,10 @@ EPFL Lectures on Conformal Field Theory
 </a></li>
 
 <li>
-<a href="https://maggiexheuw.github.io/Conformal/EPFL Lectures on Conformal Field Theory in D ≥ 3 Dimensions (Slava Rychkov (auth.)) (Z-Library).pdf>
-EPFL Lectures on Conformal Field Theory
+<a href="https://maggiexheuw.github.io/Conformal/
+EPFL Lectures on Conformal Field Theory in D ≥ 3 Dimensions (Slava Rychkov (auth.)) (Z-Library).pdf">
+EPFL Lectures on Conformal Field Theory--Springer
 </a></li>
-
 
 
 
