--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -32,7 +32,7 @@ Bosonization and strongly correlated systems--Alexander O. Gogolin, Alexander A.
 </a></li>
 
 <li><a href="https://maggiexheuw.github.io/Conformal/Quantum field theory in condensed matter physics (Alexei M. Tsvelik) (Z-Library).pdf">
-Quantum Field Theory in Condensed Matter Physics(one dimensional system)--Alexei M. Tsvelik
+Quantum Field Theory in Condensed Matter Physics $\text{(one dimensional system)}$ --Alexei M. Tsvelik
 </a></li>
 
 
