--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -165,3 +165,17 @@ Entanglement Entropy and AdS/CFT--Tadashi Takayanagi
 <a href="https://maggiexheuw.github.io/Conformal/Shibata.pdf">
 Quantum Hall state and entropy--Shibata
 </a></li>
+
+
+### Deconfined quantum critical points
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Lecture4.pdf">
+Deconfined Quantum Critical Points--Senthil
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/goa1107_2.pdf">
+Deconfined quantum criticality--Senthil
+</a></li>
