--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -116,7 +116,6 @@ Quantum hall and entanglement entropy --N. Shibata
 
 
 
-### Wu lecture
 
 
 <li>
@@ -124,6 +123,12 @@ Quantum hall and entanglement entropy --N. Shibata
 $SU(N)$ Hubbard model on honeycomb--Assaad 
 </a></li>
 ## Cong Jun Wu's Lecture 
+
+### Wu lecture
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/31-36.pptx">
+Condensed matter physics --Cong Jun WU 
+</a></li>
 
 
 <li>
@@ -153,6 +158,11 @@ Frustrated superfluidity--Cong Jun Wu
 </a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Symmetry_V4.pdf">
+The Symmetry Principle in Condensed Matter Physics--Cong Jun Wu
+</a></li>
+
 ### Entangle ment Enropy 
 
 <li>
@@ -178,4 +188,12 @@ Deconfined Quantum Critical Points--Senthil
 <li>
 <a href="https://maggiexheuw.github.io/Conformal/goa1107_2.pdf">
 Deconfined quantum criticality--Senthil
+</a></li>
+
+
+### Superconductivity 
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Fan_Yang.pptx">
+Electron-Electron Interaction Driven Exotic SCs on Quasicrystals--Fan YAng 
 </a></li>
