--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -163,6 +163,12 @@ Frustrated superfluidity--Cong Jun Wu
 The Symmetry Principle in Condensed Matter Physics--Cong Jun Wu
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/Wu_QSpinHall_KITP.pdf">
+Helical Luttinger liquid --Cong Jun WU 
+</a></li>
+
+
 ### Entangle ment Enropy 
 
 <li>
@@ -195,5 +201,5 @@ Deconfined quantum criticality--Senthil
 
 <li>
 <a href="https://maggiexheuw.github.io/Conformal/Fan_Yang.pptx">
-Electron-Electron Interaction Driven Exotic SCs on Quasicrystals--Fan YAng 
+Electron-Electron Interaction Driven Exotic SCs on Quasicrystals--Fan Yang 
 </a></li>
