--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -197,6 +197,12 @@ Deconfined quantum criticality--Senthil
 </a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/quantum-connections-lectures-2019.pdf">
+Duality in Condensed Matter
+Physics and Quantum Field Theory--Eduardo Fradkin 
+</a></li>
+
 ### Superconductivity 
 
 <li>
