--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -60,13 +60,13 @@ C.N.Yang
 <li>
 <a href="https://www.ias.edu/sns/adler"> 
 Stephen.Adler
-</a></li>"> 
+</a></li>
 
 
 <li>
 <a href="https://www.ias.edu/sns/malda"> 
 Juan.Maldcena
-</a></li>"> 
+</a></li>
 
 
 
@@ -105,6 +105,18 @@ Symmetry and Dirac monopole
 
 <li><a href="https://zhuanlan.zhihu.com/p/23690915"> 
 Haldane chain 
+</a></li>
+
+<li><a href="http://home.ustc.edu.cn/~lxsphys/index.html"> 
+龚明
+</a></li>
+
+<li><a href="https://www.tkm.kit.edu/downloads/ss2016_tkm2/TKM2_9.pdf"> 
+Green function 
+</a></li>
+
+<li><a href="https://www.physics.umd.edu/courses/Phys851/"> 
+OPE expansion 
 </a></li>
 
 
@@ -182,5 +194,13 @@ spin geometry
 <a href="
 https://www.math.ucla.edu/~vsv/papers/ch6.pdf">
 Supersymmetry ，spinor analysis
+</a>
+</li>
+
+
+<li>
+<a href="
+https://pi.math.cornell.edu/~dmehrle/notes/">
+Hopf algebra and geometry --David Mehrle
 </a>
 </li>
