--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -36,6 +36,10 @@ Quantum Field Theory in Condensed Matter Physics $\text{(one dimensional system)
 </a></li>
 
 
+<li><a href="https://maggiexheuw.github.io/Conformal/Quantum Physics in One Dimension (The international series of monographs on physics 121) (Thierry Giamarchi) (Z-Library).pdf">
+Quantum Physics in One Dimension--Thierry Giamarchi
+</a></li>
+
 
 ### Superconductivity
 <li><a href="https://maggiexheuw.github.io/pdf/tao.pdf">
