--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -209,3 +209,12 @@ Physics and Quantum Field Theory--Eduardo Fradkin
 <a href="https://maggiexheuw.github.io/Conformal/Fan_Yang.pptx">
 Electron-Electron Interaction Driven Exotic SCs on Quasicrystals--Fan Yang 
 </a></li>
+
+
+### Field theory 
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/QFT.pdf">
+Thoughts About Quantum
+Field Theory--Nathan Seiberg 
+</a></li>
