--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -19,7 +19,7 @@ tags:
 
 
 <li>
-<a href="https://maggiexheuw.github.io/Group/Group/QFT234.pdf">
+<a href="https://maggiexheuw.github.io/Group/QFT234.pdf">
 Quantum Field Theory II--ETH Zurich,Babis Anastasiou
 </a></li>
 
