--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -82,17 +82,17 @@ Quantum transport theory--Jorgen Rammer
 </a></li>
 
 <li>
-<a href="https://maggiexheuw.github.io/pdf/Interacting Electrons Theory and Computational Approaches (Richard M. Martin, Lucia Reining etc.) (Z-Library).pdf">
+<a href="https://maggiexheuw.github.io/pdf2/Interacting Electrons Theory and Computational Approaches (Richard M. Martin, Lucia Reining etc.) (Z-Library).pdf">
 Interacting Electrons Theory and Computational Approaches--Cambradige press
 </a></li>
 
 <li>
-<a href="https://maggiexheuw.github.io/pdf/Many-particle physics (Gerald D. Mahan) (Z-Library).djvu">
+<a href="https://maggiexheuw.github.io/pdf2/Many-particle physics (Gerald D. Mahan) (Z-Library).djvu">
 Many-particle physics (Gerald D. Mahan) (Z-Library).djvu--Mahan
 </a></li>
 
 <li>
-<a href="https://maggiexheuw.github.io/pdf/Field Theory Methods and Quantum Critical Phenomena - Fields, Strings and Critical Phenomena, p. 563-640, (ed. E. Brézin and J.... (I. Affleck) (Z-Library).pdf">
+<a href="https://maggiexheuw.github.io/Group/Field Theory Methods and Quantum Critical Phenomena - Fields, Strings and Critical Phenomena, p. 563-640, (ed. E. Brézin and J.... (I. Affleck) (Z-Library).pdf">
 Field theory methods and critical phenomenna --Affleck $(1990)$
 </a>
 </li>
