--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -19,7 +19,7 @@ tags:
 
 
 <li>
-<a href="https://maggiexheuw.github.io/Group/QFT234.pdf">
+<a href="https://maggiexheuw.github.io/Group/qft2.pdf">
 Quantum Field Theory II--ETH Zurich,Babis Anastasiou
 </a></li>
 
@@ -84,9 +84,7 @@ An introduction to balck holes, information, and the string theory revolution
 
 
 <li>
-<a href="https://maggiexheuw.github.io/Conformal/Lectures on
-Matrix Field
-Theory.pdf">
+<a href="https://maggiexheuw.github.io/Conformal/quantum.pdf">
 Lectures on Matrix Field
 Theory--Badis Ydri
 </a></li>
@@ -112,6 +110,13 @@ EPFL Lectures on Conformal Field Theory--Springer
 </a></li>
 
 
+### Soliton 
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/
+Topological and non-topological solitons in scalar field -- Shnir, Yakov M -- Cambridge monographs on mathematical physics, 2018 -- Cambridge -- 9781108636254 -- 6b62f84bf56ded1e3a45986d7b69df83 -- Anna’s Archive (1).djvu">
+Topological and non-topological solitons in scalar field -- Shnir, Yakov 
+</a></li>
 
 ## Mathematical physics
 
