--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -114,7 +114,7 @@ EPFL Lectures on Conformal Field Theory--Springer
 
 <li>
 <a href="https://maggiexheuw.github.io/Group/
-Topological and non-topological solitons in scalar field -- Shnir, Yakov M -- Cambridge monographs on mathematical physics, 2018 -- Cambridge -- 9781108636254 -- 6b62f84bf56ded1e3a45986d7b69df83 -- Anna’s Archive (1).djvu">
+Topological and non-topological solitons in scalar field -- Shnir, Yakov M -- Cambridge monographs on mathematical physics, 2018 -- Cambridge -- 9781108636254 -- 6b62f84bf56ded1e3a45986d7b69df83 -- Anna’s Archive.djvu">
 Topological and non-topological solitons in scalar field -- Shnir, Yakov 
 </a></li>
 
