--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -72,7 +72,7 @@ String theory$(1)$--Polkinski
 
 <li>
 <a href="https://maggiexheuw.github.io/Group/String theory Superstring t_ (Z-Library).pdf">
-String theory $(2)$
+String theory $(2)$--Polkinski 
 </a></li>
 
 
