--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -14,18 +14,12 @@ tags:
 
 
 
-<li>
-<a href="https://maggiexheuw.github.io/pdf2/Xu_AdScmt_KITP.pdf">
-Topological Terms of Nonlinear Sigma models--Cen Ke Xu
-</a></li>
 
 
 
 
-<li>
-<a href="https://maggiexheuw.github.io/pdf2/Delgado.pdf">
-The KZ Anomaly in Topological Insulators
-</a></li>
+### Quantum Hall effect 
+
 
 <li>
 <a href="https://maggiexheuw.github.io/pdf2/papic.pdf">
@@ -52,6 +46,11 @@ Geometry and entanglement entropy -- Haldane
 Graviton modes in fractional quantum hall liquids--Yu zhou Wang 
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/hasebe-kazuki.pdf">
+Noncommutative geometry on Landau levels -Hesebe 
+</a></li>
+
 
 <li>
 <a href="https://maggiexheuw.github.io/pdf2/zhang.pdf">
@@ -60,39 +59,6 @@ condensed matter systems-Shou cheng Zhang
 </a></li>
 
 
-<li>
-<a href="https://maggiexheuw.github.io/pdf2/Zhang_Lyon2009_B.pdf">
-General Theory of Topological Insulators-Shou cheng Zhang 
-</a></li>
-
-
-
-<li>
-<a href="https://maggiexheuw.github.io/pdf2/hasebe-kazuki.pdf">
-Noncommutative geometry on Landau levels -Hesebe 
-</a></li>
-
-
-<li>
-<a href="https://maggiexheuw.github.io/pdf2/hasebe-kazuki.pdf">
-Berry phase and supersymmetry--David Tong 
-</a></li>
-
-<li>
-<a href="https://maggiexheuw.github.io/pdf2/Lecture2 (1).pdf">
-Weiss-Zumino model 
-</a></li>
-
-
-<li>
-<a href="https://maggiexheuw.github.io/pdf2/Hansson_TopoMat11_KITP.pdf">
-Topological Field Theory for p-wave SCs--Hannson
-</a></li>
-
-<li>
-<a href="https://maggiexheuw.github.io/pdf2/moore_2.pdf">
-Electrodynamics in topological insulators--Moore
-</a></li>
 
 <li>
 <a href="https://maggiexheuw.github.io/pdf2/Hopf-Term_Anyons.pdf">
@@ -104,10 +70,7 @@ Hopf terms for ayons--Nicolai Lang
 $SU(4)$ Hubbard model 
 </a></li>
 
-<li>
-<a href="https://maggiexheuw.github.io/Group/exact.pdf">
-one dimensional exact solution--jun peng Cao
-</a></li>
+
 
 <li>
 <a href="https://maggiexheuw.github.io/Group/Shibata.pdf">
@@ -118,11 +81,21 @@ Quantum hall and entanglement entropy --N. Shibata
 
 
 
+
+
+### Hubbrad model 
+
 <li>
 <a href="https://maggiexheuw.github.io/Group/Assaad_CompQCM_KITP.pdf">
 $SU(N)$ Hubbard model on honeycomb--Assaad 
 </a></li>
-## Cong Jun Wu's Lecture 
+
+<li>
+<a href="https://maggiexheuw.github.io/Group/exact.pdf">
+one dimensional exact solution--jun peng Cao
+</a></li>
+
+
 
 ### Wu lecture
 <li>
@@ -203,6 +176,30 @@ Duality in Condensed Matter
 Physics and Quantum Field Theory--Eduardo Fradkin 
 </a></li>
 
+
+
+#### Topological terms
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/Xu_AdScmt_KITP.pdf">
+Topological Terms of Nonlinear Sigma models--Cen Ke Xu
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/hasebe-kazuki.pdf">
+Berry phase and supersymmetry--David Tong 
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/Lecture2 (1).pdf">
+Weiss-Zumino model 
+</a></li>
+
+
+
+
+
 ### Superconductivity 
 
 <li>
@@ -217,4 +214,54 @@ Electron-Electron Interaction Driven Exotic SCs on Quasicrystals--Fan Yang
 <a href="https://maggiexheuw.github.io/Conformal/QFT.pdf">
 Thoughts About Quantum
 Field Theory--Nathan Seiberg 
+</a></li>
+
+
+### Topological physics
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/
+2-Topological-Weng.pdf">
+Band Topology Theory and
+Topological Materials Prediction--翁红明
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/
+Hansson_TopoMat11_KITP.pdf">
+Topological Field Theory for p-wave SC--Hansson
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/symmetry.pdf">
+Symmetry,	
+  Geometry,	
+  and	
+  Topological	 
+Phases	
+   --Taylor Huges
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/Delgado.pdf">
+The KZ Anomaly in Topological Insulators
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/Zhang_Lyon2009_B.pdf">
+General Theory of Topological Insulators-Shou cheng Zhang 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/Hansson_TopoMat11_KITP.pdf">
+Topological Field Theory for p-wave SCs--Hannson
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/pdf2/moore_2.pdf">
+Electrodynamics in topological insulators--Moore
 </a></li>
