--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -106,6 +106,10 @@ Quantum hall effect--Arovas
 Composite fermion-- Jainendra K. Jain
 </a></li>
 
+<li><a href="https://maggiexheuw.github.io/Conformal/CONDMAT.pdf">
+Lecture Notes on Condensed Matter Physics
+$(A Work in Progress)$-- Arovas
+</a></li>
 
 
 ### Bose Einstein condensation
