--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -234,7 +234,7 @@ Topological Field Theory for p-wave SC--Hansson
 </a></li>
 
 <li>
-<a href="https://maggiexheuw.github.io/Conformal/symmetry.pdf">
+<a href="https://maggiexheuw.github.io/Conformal/sym.pdf">
 Symmetry,	
   Geometry,	
   and	
