--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -137,9 +137,16 @@ The Symmetry Principle in Condensed Matter Physics--Cong Jun Wu
 </a></li>
 
 <li>
-<a href="https://maggiexheuw.github.io/Wu_QSpinHall_KITP.pdf">
+<a href="https://maggiexheuw.github.io/Conformal/Wu_QSpinHall_KITP.pdf">
 Helical Luttinger liquid --Cong Jun WU 
 </a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/SUN_Tsinghua.pdf.pdf">
+
+Slater and Mott Physics of SU(N) Hubbard models
+</a></li>
+
 
 
 ### Entangle ment Enropy 
