--- a/_posts/2024-05-01-book.md
+++ b/_posts/2024-05-01-book.md
@@ -141,7 +141,9 @@ Berry Phases in Electronic Structure --Vandebilt
 </a></li>
 
 
-
+<li><a href="https://maggiexheuw.github.io/Conformal/(Springer Series in Solid-State Sciences 192) Jiadong Zang, Vincent Cros, Axel Hoffmann - Topology in Magnetism-Springer International Publishing (2018).pdf">
+Topology in magnetism 
+</a></li>
 
 
 ## Field theory textbooks recommended 
