--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -144,7 +144,7 @@ Helical Luttinger liquid --Cong Jun WU
 <li>
 <a href="https://maggiexheuw.github.io/Conformal/SUN_Tsinghua.pdf.pdf">
 
-Slater and Mott Physics of SU(N) Hubbard models
+Slater and Mott Physics of SU$(N)$ Hubbard models
 </a></li>
 
 
