--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -142,7 +142,7 @@ Helical Luttinger liquid --Cong Jun WU
 </a></li>
 
 <li>
-<a href="https://maggiexheuw.github.io/Conformal/SUN_Tsinghua.pdf.pdf">
+<a href="https://maggiexheuw.github.io/Conformal/SUN_Tsinghua.pdf">
 
 Slater and Mott Physics of SU$(N)$ Hubbard models
 </a></li>
