--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -119,6 +119,10 @@ Green function
 OPE expansion 
 </a></li>
 
+<li><a href="https://people.sissa.it/~ffranchi/"> 
+Fabio Franchini--Bethe ansatz 
+</a></li>
+
 
 ## Field theory 
 
