--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -224,6 +224,12 @@ Field Theory--Nathan Seiberg
 </a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/7th_LHC_school_2018_Lecture1__2__and_3_faisal.pptx">
+Field Theory and Electroweak Standard Model--Faisal Akram
+</a></li>
+
+
 ### Topological physics
 
 <li>
