--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -11,8 +11,11 @@ tags:
 ---
 
 
-## Field theory lecture
-
+### Field theory lecture
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Lecture Notes On Field Theory In Condensed Matter Physics (Christopher Mudry) (Z-Library).pdf">
+Lecture Notes On Field Theory In Condensed Matter Physics-- Christopher Mudry 
+</a></li>
 
 
 ### Classical Yang Mills field 
