--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -183,6 +183,10 @@ Duality in Condensed Matter
 Physics and Quantum Field Theory--Eduardo Fradkin 
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/608002411.pdf">
+Deconfined quantum critical points--Leon Balents
+</a></li>
 
 
 #### Topological terms
@@ -214,6 +218,11 @@ Weiss-Zumino model
 Electron-Electron Interaction Driven Exotic SCs on Quasicrystals--Fan Yang 
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/concepts-in-high-temperature-superconductivity----ppt-video-online-download.pdf">
+Concepts-in-high-temperature-superconductivity-- Kilveson
+</a></li>
+
 
 ### Field theory 
 
@@ -231,6 +240,26 @@ Field Theory and Electroweak Standard Model--Faisal Akram
 
 
 ### Topological physics
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/
+6390157.ppt">
+Dissipationless quantum spin current 
+at room temperature--S.C.Zhang 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/
+8063311.ppt">
+Berry Phase Effects 
+on Electronic Properties--Qian Niu 
+</a></li>
+
+
+
 
 <li>
 <a href="https://maggiexheuw.github.io/Conformal/
