--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -223,3 +223,40 @@ Solvable model for a charge-4e superconductor
 Colloquium: Fracton matter
 -- Gromov
 </a></li>
+
+
+
+## Gnerlaization of LSM theorem
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/PhysRevLett.132.070402.pdf">
+Lieb-Schultz-Mattis Theorem in Open Quantum Systems
+-- Ryu
+</a></li>
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/General Lieb–Schultz–Mattis Type Theorems for
+Quantum Spin Chains.pdf">
+General Lieb–Schultz–Mattis Type Theorems for
+Quantum Spin Chains
+-- Tasaki 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/PhysRevB.97.054412.pdf">
+Lieb-Schultz-Mattis theorem and its generalizations from the perspective
+of the symmetry-protected topological phase
+-- Cen Ke XU 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/1206.2462v2.pdf">
+On topological phases of spin chains
+</a></li>
+
+
+
