--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -275,7 +275,7 @@ The Persistent Spin Helix--S.C.Zhang
 
 <li>
 <a href="https://maggiexheuw.github.io/PPTX/
-4823841.ppt">
+qian-niu--university-of-texas-at-austin-----ppt-download.pdf">
 Semiclassical theory for Bloch electrons to second order in electromagnetic fields--Qian Niu 
 </a></li>
 
