--- a/_posts/2024-8-29-phylec.md
+++ b/_posts/2024-8-29-phylec.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     Mathematical physics
+title:     Colloquium 
 subtitle:   
 date:       2024-08-14
 author:     Maggie
