--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -259,4 +259,18 @@ On topological phases of spin chains
 </a></li>
 
 
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Generalization of the Haldane conjecture to
+SU(n) chains.pdf">
+Generalization of the Haldane conjecture to
+SU$(n)$ chains
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Lieb-Schultz-Mattis, Luttinger, and ’t Hooft –
+anomaly matching in lattice systems.pdf">
+Lieb-Schultz-Mattis, Luttinger, and ’t Hooft –
+anomaly matching in lattice systems--MengCheng,Seiberg
+</a></li>
+
 
