--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -344,7 +344,7 @@ Electrodynamics in topological insulators--Moore
 </a></li>
 
 
-### Topological physics
+### Quantum spin liquid 
 
 
 <li>
@@ -357,3 +357,26 @@ Jordan-Wigner Transformation and Topological characterization of quantum phase t
 <a href="https://maggiexheuw.github.io/PPTX/TR49-QuantumSpinLiquids.pdf">
 Quantum spin liquids--Simon Trebst 
 </a></li>
+
+
+### LSM theorem 
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/PPTX/Quantum Spin Chains and
+von Neumann Algebra.pdf">
+Quantum Spin Chains and
+von Neumann Algebra
+Lieb-Schultz-Mattis type theorem
+without continuous symmetry--Hal Tasaki
+</a></li>
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/PPTX/ChaoMing_Jian_LSM_SPT_Talk_JCM_Aspen30min.pdf">
+Generalized Lieb-Schultz-Mattis
+theorems from the SPT perspective--Jian Chao Ming 
+</a></li>
+
