--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -237,8 +237,7 @@ Lieb-Schultz-Mattis Theorem in Open Quantum Systems
 
 
 <li>
-<a href="https://maggiexheuw.github.io/Conformal/General Lieb–Schultz–Mattis Type Theorems for
-Quantum Spin Chains.pdf">
+<a href="https://maggiexheuw.github.io/LSM3.pdf">
 General Lieb–Schultz–Mattis Type Theorems for
 Quantum Spin Chains
 -- Tasaki 
@@ -260,15 +259,13 @@ On topological phases of spin chains
 
 
 <li>
-<a href="https://maggiexheuw.github.io/Conformal/Generalization of the Haldane conjecture to
-SU(n) chains.pdf">
+<a href="https://maggiexheuw.github.io/Conformal/LSM1.pdf">
 Generalization of the Haldane conjecture to
 SU$(n)$ chains
 </a></li>
 
 <li>
-<a href="https://maggiexheuw.github.io/Conformal/Lieb-Schultz-Mattis, Luttinger, and ’t Hooft –
-anomaly matching in lattice systems.pdf">
+<a href="https://maggiexheuw.github.io/Conformal/LSM2.pdf">
 Lieb-Schultz-Mattis, Luttinger, and ’t Hooft –
 anomaly matching in lattice systems--MengCheng,Seiberg
 </a></li>
