--- a/_posts/2024-05-20-study.md
+++ b/_posts/2024-05-20-study.md
@@ -237,7 +237,7 @@ Lieb-Schultz-Mattis Theorem in Open Quantum Systems
 
 
 <li>
-<a href="https://maggiexheuw.github.io/LSM3.pdf">
+<a href="https://maggiexheuw.github.io/Conformal/LSM3.pdf">
 General Lieb–Schultz–Mattis Type Theorems for
 Quantum Spin Chains
 -- Tasaki 
