--- a/_posts/2024-05-01-website.md
+++ b/_posts/2024-05-01-website.md
@@ -15,6 +15,10 @@ tags:
 
 ## Physicists
 
+<li><a href="http://www-thphys.physics.ox.ac.uk/people/JohnCardy/"> 
+John Cardy 
+</a></li>
+
 <li><a href="https://public.websites.umich.edu/~williams/"> 
 Lorentz group notes -- David Williams
 </a></li>
@@ -68,6 +72,10 @@ Stephen.Adler
 Juan.Maldcena
 </a></li>
 
+<li>
+<a href="https://quantum-many-body-theory.lab.westlake.edu.cn/index.html"> 
+Wei Zhu
+</a></li>
 
 
 
@@ -81,7 +89,7 @@ Projective symetry group--Shigeru
 Abstract group--Gregory Moore
 </a></li>
 
-### Toopologcal phase
+## Toopologcal phase
 <li><a href="https://grushingroup.cnrs.fr/lectures-and-resources/physics_lectures/"> 
 Theory of Topological Matter
 </a></li>
@@ -139,6 +147,20 @@ Fierz idenity
 <li><a href="https://conf.itp.phys.ethz.ch/esi-school/lecture-notes.html"> 
 Conformal field theory
 </a></li>
+
+<li><a href="https://www.ggi.infn.it/laces/LACES21/CFTdefects21.html"> 
+Defect and boundary conformal field theory
+</a></li>
+
+<li><a href="http://sporadic.stanford.edu/conformal/"> 
+Conformal field theory and representation--Stanford
+</a></li>
+
+<li><a href="https://abatanasov.com/#books"> 
+Ising CFT--Alex Atanasov
+</a></li>
+
+
 
 
 ## Tools
@@ -206,5 +228,22 @@ Supersymmetry ，spinor analysis
 <a href="
 https://pi.math.cornell.edu/~dmehrle/notes/">
 Hopf algebra and geometry --David Mehrle
+</a>
+</li>
+
+
+
+## Elementary geometry
+
+
+<a href="
+http://www.malinc.se/noneuclidean/en/circleinversion.php">
+Non-Euclidean geometry
+</a>
+</li>
+
+<a href="
+https://www.chebfun.org/examples/complex/ConformalSquare.html">
+Conforaml map to square 
 </a>
 </li>
