--- a/_posts/2024-06-08-field.md
+++ b/_posts/2024-06-08-field.md
@@ -112,6 +112,33 @@ EPFL Lectures on Conformal Field Theory in D ≥ 3 Dimensions (Slava Rychkov (au
 EPFL Lectures on Conformal Field Theory--Springer
 </a></li>
 
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/
+CFTdefects21_CFTnotes (1).pdf">
+Conformal Field Theory with Boundaries and Defects--C. P. Herzog
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/
+CFTNotes.pdf">
+Lectures on Conformal Field Theories
+in more than two dimensions--Hugh Osborn
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/
+CFT for Rep Theory Seminar.pdf">
+Conformal Field Theories Beyond Two Dimensions--Alex Atanasov
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/
+2D CFT and the Ising Model.pdf">
+2D CFT and the Ising Model--Alex Atanasov
+</a></li>
+
+
 
 ### Soliton 
 
