--- a/_posts/2024-05-21-lecture.md
+++ b/_posts/2024-05-21-lecture.md
@@ -144,8 +144,44 @@ Helical Luttinger liquid --Cong Jun WU
 <li>
 <a href="https://maggiexheuw.github.io/Conformal/SUN_Tsinghua.pdf">
 
-Slater and Mott Physics of SU$(N)$ Hubbard models
+Slater and Mott Physics of SU$(N)$ Hubbard models--Congjun WU 
 </a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Sr3Ru2O7_Austin.pdf">
+Unconventional(nematic) Metamagnetism
+in the $t_{2g}$-orbital System of $Sr_3Ru_2O_7$--Congjun WU 
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Uncon_Mag.pdf">
+Unconventional magnetism and spontaneous
+spin-orbit ordering--Congjun WU 
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/5252566.ppt">
+Quaternionic Landau level --Congjun WU 
+</a></li>
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Dynamics_Chicago.pdf">
+Symmetry and Correlation Aspects of
+Quantum Dynamics --Congjun WU 
+</a></li>
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/4703031.pptf">
+$T$-invariant Decomposition and the Sign Problem in Quantum Monte Carlo Simulations --Congjun WU 
+</a></li>
+
+
+
+
+
+
 
 
 
@@ -380,3 +416,20 @@ Generalized Lieb-Schultz-Mattis
 theorems from the SPT perspective--Jian Chao Ming 
 </a></li>
 
+
+### Conformal field 
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/3D Ising Model.pdf">
+3D Ising Model
+and
+Conformal Bootstrap--Slava Rychkov
+</a></li>
+
+
+
+<li>
+<a href="https://maggiexheuw.github.io/Conformal/Mixed Correlators in 3D Conformal Field Theories.pdf">
+Mixed Correlators in 3D Conformal Field Theories--Alex Atanasov
+</a></li>
